# easyRL-v0

./: .gitignore  EasyRL.py  HELPME.md  PortalRL  README.md  adrqn.py  agent.py  alien.py  atari-py  atariEnv.py  cartPoleEnv.py  cartPoleEnvDiscrete.py  classicControlEnv.py  controller.py  db.sqlite3  deepQ.py  drqn.py  environment.py  experienceBuffer.py  frozenLakeEnv.py  install.sh  manage.py  model.py  modelBasedAgent.py  modelFreeAgent.py  paramFrame.py  policyIteration.py  portalrl.spec  ppo.py  qLearning.py  qTable.py  requirements.txt  sarsa.py  splash.txt  valueIteration.py  view.py
Agents/: DeepSARSA.py  TRPO.py  actorCriticNative.py  adrqn.py  agent.py  cem.py  ddpg.py  deepQ.py  deepQNative.py  doubleDuelingQNative.py  drqn.py  drqnConvNative.py  drqnNative.py  duelingDDQN.py  episodicExperienceBuffer.py  modelBasedAgent.py  modelFreeAgent.py  models.py  models_torch.py  npg.py  policyIteration.py  ppo.py  ppoNative.py  ppo_test.py  qLearning.py  qTable.py  rainbow.py  reinforceNative.py  sac.py  sarsa.py  testingTRPO.py  trpo.py  valueIteration.py
Agents/Collections/: ExperienceReplay.py  PrioritizedReplay.py  SumTree.py  TransitionFrame.py
Agents/Native/: CMakeLists.txt  deepQNative.cpp  deepQNative.h  deepQNative.hpp
Agents/Native/actorCriticNative/: CMakeLists.txt  actorCritic.cpp  actorCritic.h  actorCritic.hpp  buffer.cpp  buffer.h
Agents/Native/deepQNative/: CMakeLists.txt  deepQNative.cpp  deepQNative.h  deepQNative.hpp  dqnReplayBuffer.cpp  dqnReplayBuffer.hpp
Agents/Native/drqnConvNative/: CMakeLists.txt  _drqnConvNative.c  drqnConvNative.cpp  drqnConvNative.h  drqnConvNative.hpp  drqnConvReplayBuffer.cpp  drqnConvReplayBuffer.hpp
Agents/Native/drqnNative/: CMakeLists.txt  drqnNative.cpp  drqnNative.h  drqnNative.hpp  drqnReplayBuffer.cpp  drqnReplayBuffer.hpp
Agents/Native/ppoNative/: CMakeLists.txt  buffer.cpp  buffer.h  ppo.cpp  ppo.hpp  ppoNative.h
Agents/Native/reinforceNative/: CMakeLists.txt  buffer.cpp  buffer.h  reinforce.cpp  reinforce.h  reinforce.hpp
Agents/Policy/: approximator.py  policy.py
Agents/Util/: paramFrame.py
Custom Agents/: DeepSARSA.py  TRPO.py  randomAgent.py
Custom Environments/: SALEEnv.py  drugDosingEnv.py
Custom Environments/drugDosing/: Readme.txt  drugDosingEnv.py
Environments/: acrobotEnv.py  atariEnv.py  cartPoleEnv.py  cartPoleEnvDiscrete.py  classicControlEnv.py  environment.py  frozenLakeEnv.py  mountainCarEnv.py  pendulumEnv.py
MVC/: cloudBridge.py  controller.py  helptext.py  model.py  terminalView.py  view.py
core/: settings.py  storage.py  urls.py
easyRL_app/: apps.py  forms.py  models.py  urls.py  utilities.py  views.py
easyRL_app/migrations/: 0001_initial.py
lambda/: SAAF.code-workspace  download.py  killSelf.py  ui-config.json  upload.py  version_check1.txt
lambda/python_template/deploy/: test.sh  (+2 more)
templates/easyRL_app/: base.html  document_form.html  index.html  login.html
webpage/easyRL_app/: apps.py  urls.py
(+7 files in other folders)
